HelloUltraviolet/Fixtures/RejectedSource/Expressions/OperatorStaticTypes/Expected.uv
//! Expected diagnostic metadata for the OperatorStaticTypes rejected-source specimen.

expectedDiagnostic("E-SEM-2525", "def.16.OperatorStaticTypes")
